# ops-setup

./: Makefile  README.md  pyproject.toml
src/ops_setup/: __init__.py  gh.py
src/ops_setup/assets/github/workflows/: agentic-squad.yml
